src/main/java/com/example/timelist/error/ErrorHandler.java
package com.example.timelist.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class ErrorHandler {

    @ResponseStatus(HttpStatus.NOT_FOUND)
    public void handleGroupNotFound(GroupNotFoundException e) {

    }
}
